[package]
name = "sqlite-async-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark comparing three approaches to SQLite operations in async Rust: direct blocking, spawn_blocking, and tokio-rusqlite"
authors = ["DFINITY"]
license = "Apache-2.0"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.4"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "plot"
path = "src/plot.rs"

[profile.release]
opt-level = 3
